<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginBottom="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    android:elevation="@dimen/_16sdp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:id="@+id/bg"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconOne"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:src="@drawable/ic_take_selfie"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconOne"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleTxt"
                        style="@style/TextViewKyc"
                        android:text="@string/take_a_selfie"/>

                    <TextView
                        android:id="@+id/astTxt"
                        style="@style/TextViewKyc"
                        android:text="@string/ast"
                        android:textColor="@android:color/holo_red_dark"/>

                </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uploadTxt"
                    style="@style/TextViewKyc"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/colorEfxBlue"
                    android:text="@string/upload"/>

                <TextView
                    android:id="@+id/uploadedTxt"
                    android:visibility="gone"
                    style="@style/TextViewKyc"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:textColor="@color/greenColor"
                    android:text="@string/uploaded"/>

            </LinearLayout>


            </LinearLayout>



        </RelativeLayout>




    </LinearLayout>


</androidx.cardview.widget.CardView>

</layout>