<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/progress"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDarkTrans"
            android:layout_height="@dimen/_2sdp">

<!--            Step One-->
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorPrimaryDark"
                android:layout_height="@dimen/_2sdp"/>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/colorWhite"/>

<!--            Step Two-->
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"/>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/colorWhite"/>

<!--            Step Three-->
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"/>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/colorWhite"/>

<!--            Step Four-->
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewKyc"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/_16sdp"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/just_follow" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/stepOneView"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/circle_selected">

                        <TextView
                            style="@style/TextViewKyc"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/helvetica_bold"
                            android:text="@string/step_1"
                            android:textColor="@color/colorEfxBlue" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/lineOne"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/stepOneView"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:id="@+id/stepTwoView"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_toEndOf="@id/lineOne"
                        android:background="@drawable/circle_unselected">

                        <TextView
                            android:id="@+id/textTwo"
                            style="@style/TextViewKyc"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/helvetica_bold"
                            android:text="@string/step_2" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/lineTwo"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/stepTwoView"
                        android:background="@color/grey" />


                    <RelativeLayout
                        android:id="@+id/stepThreeView"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_toEndOf="@id/lineTwo"
                        android:background="@drawable/circle_unselected">

                        <TextView
                            android:id="@+id/textThree"
                            style="@style/TextViewKyc"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/helvetica_bold"
                            android:text="@string/step_3" />

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewKyc"
                        android:text="@string/req_fields"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        style="@style/TextViewKyc"
                        android:text="@string/ast"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/_9sdp" />

                </LinearLayout>

                <ViewFlipper
                    android:id="@+id/signUpViewFlipper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:measureAllChildren="false">

                    <include
                        android:id="@+id/oneStep"
                        layout="@layout/step_one_layout" />

                    <include
                        android:id="@+id/twoStep"
                        layout="@layout/step_two_layout" />

                    <include
                        android:id="@+id/threeStep"
                        layout="@layout/step_three_layout" />


                </ViewFlipper>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signUpViewFlipper">

                    <Button
                        android:id="@+id/prevClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:visibility="gone"
                        android:layout_height="@dimen/_32sdp"
                        android:fontFamily="@font/helvetica_bold"
                        android:layout_margin="@dimen/_16sdp"
                        android:textColor="@color/colorButtonText"
                        android:text="@string/prev_txt"
                        android:textSize="@dimen/_11sdp"
                        android:textAllCaps="false"
                        android:background="@drawable/rounded_button"/>

                    <Button
                        android:id="@+id/nextClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:fontFamily="@font/helvetica_bold"
                        android:layout_margin="@dimen/_16sdp"
                        android:textColor="@color/colorButtonText"
                        android:text="@string/next_txt"
                        android:textSize="@dimen/_11sdp"
                        android:textAllCaps="false"
                        android:background="@drawable/rounded_button"/>

                </LinearLayout>


            </LinearLayout>



        </RelativeLayout>

        </ScrollView>

    </LinearLayout>




</layout>